# pipdloader

./: CMakeLists.txt  M58Encoder.py  README.md  demo.py  emulator.pd  pipdloader.py  setup.sh  simpletest.pd  simpletest.py  test.pd
demo/: demo0.pd  emulator.pd
experiments/puredata/: demo.pd  ui.py
lib/: sig2float~.pd
patches/: demo.pd  demo2.pd  emulator.pd  sine.pd
src/: main.c  pipdloader.h  test_hardware.c
